--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,24 @@
+body {
+  display: grid;
+  background-color: rgb(0, 0, 122);
+  color: #ff001d;
+}
 #boardContainer {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   width: fit-content;
-  background-color: aqua;
+  background-color: #ff41b3;
+  border: 3px solid #ff001d;
+  font-size: 5rem;
+  text-shadow: black 1px 1px 1px;
+  color: #ff001d;
 }
 .boardCells {
   display: grid;
   justify-items: center;
   align-items: center;
-  border: 1px solid black;
+  border: 0.5rem solid #ff001d;
   width: 200px;
   height: 200px;
 }
@@ -18,5 +27,13 @@
 }
 #fieldContainer {
   display: flex;
+  height: 2rem;
+  gap: 10px;
   border: none;
+}
+#fieldContainer > * {
+  font-size: 1.4rem;
+  background-color: #ff41b3;
+  border: 1px solid black;
+  text-shadow: #ff001d 1px 1px 1px;
 }
